--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,8 @@
             android:layout_height="wrap_content"
             android:text="Sign In"
             android:id="@+id/button"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:onClick="clickSignIn" />
 
         <Button
             android:layout_width="wrap_content"
@@ -41,7 +42,7 @@
         android:padding="20dp"
         android:gravity="center_horizontal"
         android:id="@+id/linearLayout"
-        android:background="@android:color/white">
+        android:background="#96ffffff">
 
         <ImageView
             android:layout_width="@dimen/icon_width"
